--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,3 +10,13 @@
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
+<body>
+    <% if (userLogged) { %>
+      <nav class="navbar navbar-default">
+          <div class="container-fluid">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="/logout">Logout</a></li>
+            </ul>
+          </div>
+      </nav>
+    <% } %>
