--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,17 +6,29 @@
    	<title>Bio Society</title>
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="stylesheets/style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <% if (userLogged) { %>
-      <nav class="navbar navbar-default">
-          <div class="container-fluid">
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="/logout">Logout</a></li>
-            </ul>
-          </div>
-      </nav>
-    <% } %>
+
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+      <div class="navbar-header">
+          <a class="navbar-brand" href="/">Bio Society</a>
+      </div>
+      <!-- <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Home</a></li>
+      </ul> -->
+      <ul class="nav navbar-nav navbar-right">
+          <% if (userLogged) { %>
+              <li><a class="navbar-brand" href="/products">Products</a></li>
+              <li><a class="navbar-brand" href="/login"><span class="mRight10 glyphicon glyphicon-log-in"></span>Se déconnecter</a></li>
+          <% } else { %>
+              <li><a class="navbar-brand" href="/signup"><span class="mRight10 glyphicon glyphicon-user"></span>S'enregistrer</a></li>
+              <li><a class="navbar-brand" href="/login"><span class="mRight10 glyphicon glyphicon-log-in"></span>Connexion</a></li>
+          <% } %>
+      </ul>
+  </div>
+</nav>
