Update panier to products

--- a/views/panier.ejs
+++ b/views/panier.ejs
@@ -76,7 +76,7 @@
                 </div>
             </div>
             <ul class="nav nav-pills nav-stacked">
-                <li class="active"><a href="#"><span class="badge pull-right">500 <span class="glyphicon glyphicon-euro"></span></span> Total</a>
+                <li class="active"><a href="#"><span class="badge pull-right"><%= products.total%> <span class="glyphicon glyphicon-euro"></span></span> Total</a>
                 </li>
             </ul>
             <br/>
