--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -39,8 +39,22 @@ a {
     background: #009A31;
 }
 
+.btn_send_panier {
+    border: 1px solid #009A31;
+    background: #EFEFEF;
+    color: #009A31;
+    padding: 5px 40px;
+    font-size: 30px;
+    font-variant: small-caps;
+    display: block;
+    margin: 0 auto;
+    margin-top: 30px;
+}
 
-
+.btn_send_panier:hover {
+    background: #009A31;
+    color: #EFEFEF;
+}
 
 .form {
     z-index: 2;
@@ -51,6 +65,15 @@ a {
     width: 600px;
     background: rgba(0,0,0, .7);
     max-width: 95%;
+    padding: 30px 0;
+}
+
+.cards_container {
+    z-index: 2;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
     padding: 30px 0;
 }
 
@@ -105,4 +128,31 @@ input.w500:focus {
     background-color: #EFEFEF;
     left: 50%;
     transform: translateX(-50%);
+}
+
+.cards {
+    background: rgba(0,0,0, .7);
+    color: #EFEFEF;
+}
+
+.cards h3 {
+    color: #EFEFEF;
+    padding: 10px 0;
+    margin-bottom: 0;
+    font-variant: small-caps;
+}
+
+
+
+.cards p {
+    padding-left: 15px;
+    font-size: 15px;
+}
+
+.btn-number {
+    border-radius: 0;
+}
+
+.whiteColor {
+    color: #EFEFEF;
 }
