Improve the navigation to order a product.

--- a/views/products.ejs
+++ b/views/products.ejs
@@ -31,7 +31,9 @@
 			 	<% } %>
 		   	</div>
 		</div>
-		<input type="submit" class="btn_send_panier" value="Submit">
+		<% if (userLogged) { %>
+			<input type="submit" class="btn_send_panier" value="Submit">
+		<% } %>
 	</form>
 	<% } else {%>
 		<p>Je suis vide</p>
