Message to connect if you want to order

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -156,3 +156,18 @@ input.w500:focus {
 .whiteColor {
     color: #EFEFEF;
 }
+
+.msg {
+    margin-top: 15px;
+    color: #EFEFEF;
+    font-size: 17px;
+}
+
+.msg a {
+    text-align: center;
+    font-size: 16px;
+}
+
+.displayInlineBlock {
+    display: inline-block;
+}
