--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,10 @@
 <% include partials/header %>
     <div class="bgBody">
-        <form class="form form-horizontal" action="/login" method="post">
-            <div class="text-center" style="">
+        <div class="form form-horizontal">
+            <div class="text-center">
                 <h1>Bienvenue sur le site de Bio' Society !</h1>
                 <a style="display: inline-block; color: #EFEFEF; text-decoration: none; margin-top: 30px;" class="btn_send" href="/products">Voir les produits disponibles</a>
             </div>
-        </form>
+        </div>
     </div>
 <% include partials/footer %>
