Change layout sentence in product's page

--- a/views/products.ejs
+++ b/views/products.ejs
@@ -36,7 +36,7 @@
 		<% } else { %>
 			<div class="msg">
 				<div class="text-center">
-					<p>Veuillez vous connecter si vous souhaitez commander quelque chose. Si vous n'avez pas de compte, vous pouvez vous inscrire en cliquant sur le lien ci-dessous.</p>
+					<p>Veuillez vous connecter si vous souhaitez commander quelque chose.<br>Si vous n'avez pas de compte, vous pouvez vous inscrire en cliquant sur le lien ci-dessous.</p>
 					<a class="displayInlineBlock btn_send_panier" href="/login">Se connecter</a>
 					<a class="displayInlineBlock btn_send_panier" href="/signup">S'inscrire</a>
 				</div>
