add orders link on header

--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -17,7 +17,9 @@
 	        <td><%= orders[i].statut %></td>
 	        <td><%= orders[i].total %></td>
 	        <td><%= orders[i].id_suivi %></td>
+			<td></td>
 	    </tr>
 	    <% } %>
+</table>
 
 <% include partials/footer %>
