--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -25,6 +25,7 @@
       <ul class="nav navbar-nav navbar-right">
           <li><a class="navbar-brand" href="/products">Products</a></li>
           <% if (userLogged) { %>
+			  <li><a class="navbar-brand" href="/orders">Orders</a></li>
               <li><a class="navbar-brand" href="/logout"><span class="mRight10 glyphicon glyphicon-log-in"></span>Se déconnecter</a></li>
           <% } else { %>
               <li><a class="navbar-brand" href="/signup"><span class="mRight10 glyphicon glyphicon-user"></span>S'enregistrer</a></li>
